# re47

./: .gitignore  CMakeLists.txt  README.md  build-test.bat  build.bat  count_lines.bat
.github/workflows/: main.yml
dll_defs/: directplay.def  globals.def  system.def  systemprobe.def
external_include/: dplay.h
resources/: hitman.rc
src/: typedefs.h
src/Globals/: dllmain.cpp
src/Hitman/: main.cpp
src/System/: ZSysInterface.cpp  ZSysInterface.h  dllmain.cpp  system.h  zsyscom.cpp  zsyscom.h  zsysfile.h  zsysmem.cpp
src/System/reftab/: equreftab.h  reftab.cpp  reftab.h  strreftab.cpp
src_main/: common.h  memory.cpp  typedefs.h
src_main/directplay/: directplay.cpp  directplay.h  directplaydll.cpp  directplaydll.h  directplayproxy.cpp  directplayproxy.h  dllmain.cpp
src_main/drawing/: zcounter.cpp  zcounter.h
src_main/globals/: dllmain.cpp
src_main/hitman/: main.cpp
src_main/system/: dllmain.cpp  system.h  zsyscom.cpp  zsyscom.h  zsysfile.cpp  zsysfile.h  zsysinterface.cpp  zsysinterface.h  zsysmem.cpp  zsysmem.h
src_main/system/reftab/: reftab.cpp
src_main/systemprobe/: csystemprobe.cpp  csystemprobe.h  dllmain.cpp
src_main/zstdlib/: cfastlookup2.cpp  cfastlookup2.h  cfastlookupfilecache.cpp  cfastlookupfilecache.h  fszip.cpp  fszip.h  mystr.cpp  mystr.h  zdynamicloader.cpp  zdynamicloader.h  zmalloc.cpp  zmalloc.h  zmastercontrol.cpp  zmastercontrol.h
src_main/zstdlib/input/: sinputnode.h  zactionmap.cpp  zactionmap.h  zactionmapdefinition.h  zinputaction.cpp  zinputaction.h  zinputactions.cpp  zinputactions.h
src_main/zstdlib/reftab/: allocreftab.cpp  allocreftab.h  equreftab.cpp  equreftab.h  linkreftab.cpp  linkreftab.h  linksortreftab.cpp  linksortreftab.h  reftab.cpp  reftab.h  reftab32.cpp  reftab32.h  staticreftab.cpp  staticreftab.h  strreftab.cpp  strreftab.h
src_main/zstdlib/trees/: zrbtree.cpp  zrbtree.h  zvaltree.cpp  zvaltree.h
src_main/zstdlib/utilities/: dynamicarray.h
src_main/zstdlib/zconsole/: zconsole.cpp  zconsole.h  zconsolecommand.cpp  zconsolecommand.h
src_testing/impl_swap/: constructors.cpp  constructors.h  dllmain.cpp  loader.cpp  loader.h  methods.cpp  methods.h  utilities.h  wnd_patches.cpp  wnd_patches.h
src_testing/impl_swap/menu/: menu.cpp  menu.h
src_testing/impl_swap/menu/mods/: freecam.cpp  freecam.h
